--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
    "main": "app.js",
    "type": "module",
    "scripts": {
-      "dev": "nodemon app.js"
+      "dev": "nodemon server.js"
    },
    "author": "",
    "license": "ISC",
@@ -17,7 +17,9 @@
       "jsonwebtoken": "^9.0.2",
       "morgan": "^1.10.0",
       "mysql2": "^3.9.1",
-      "typeorm": "0.3.20"
+      "nodemailer": "^6.9.9",
+      "typeorm": "0.3.20",
+      "uuid": "^9.0.1"
    },
    "devDependencies": {
       "nodemon": "^3.0.3"
